# nif2fbx

./: .gitmodules  CMakeLists.txt  README.md
fbxsdknif/: BSplineDataSet.cpp  BSplineDataSet.h  BSplineTrackDefinition.h  CMakeLists.txt  FBXNIFPlugin.cpp  FBXNIFPlugin.h  FBXNIFPluginNS.h  FBXSceneWriter.cpp  FBXSceneWriter.h  JsonUtils.cpp  JsonUtils.h  NIFReader.cpp  NIFReader.h  NIFUtils.cpp  NIFUtils.h  SkeletonProcessor.cpp  SkeletonProcessor.h  main.cpp
jsoncpp/: CMakeLists.txt
nif2fbx-test/: CMakeLists.txt  main.cpp
nif2fbxapi/: CMakeLists.txt
nif2fbxapi/include/: NIF2FBXExtension.h
